inconsistent fix to horizontal scrollbar

--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -1,15 +1,15 @@
 .InsightTooltipWrapper {
     position: absolute;
     z-index: var(--z-graph-tooltip);
-    pointer-events: none;
+    pointer-events: auto;
     transition: all 0.4s;
 }
 
 .InsightTooltip {
     max-width: 30rem;
-    overflow: hidden;
+    overflow: auto;
     font-size: 0.8125rem;
-    pointer-events: none;
+    pointer-events: auto;
     background: var(--bg-light);
     border: 1px solid var(--border);
     border-radius: var(--radius);
@@ -67,7 +67,7 @@
 
             .tag-pill {
                 margin-right: 0;
-                overflow: hidden;
+                overflow: auto;
                 color: var(--primary-alt);
                 vertical-align: middle;
                 background-color: var(--border-3000);
